@@ -31,6 +31,9 @@ LIBNOTIFY_REQUIRED="0.4"
 GIO_UNIX_REQUIRED="0.0"
 GIO_REQUIRED="0.0"
 
+dnl check for deprecated symbols:
+dnl GNOME_MAINTAINER_MODE_DEFINES
+
 PKG_CHECK_MODULES(GTK, gtk+-2.0 >= $GTK_REQUIRED)
 PKG_CHECK_MODULES(DBUS, dbus-glib-1 >= $DBUS_REQUIRED)
 PKG_CHECK_MODULES(GCONF, gconf-2.0 >= $GCONF_REQUIRED)
